Bug 1164741 - Readd parsing support for |for (var ...1 = ...2 in ...3)|, but completely ignore the |= ...2| assignment when ascribing semantics to it. r=jorendorff, r=efaust, a=sledru

--HG--
extra : amend_source : 633110fcbd1f4d16e8bffd762e3c5e2391cfff76
extra : transplant_source : %98A%C5%D2%29%B8%E7%B49%DF%88%07%1Ae%B2%8C%AA%EA%8C%CE